--- a/Ubicacion.html
+++ b/Ubicacion.html
@@ -72,17 +72,16 @@
         }
 
     </style>
-    <button onclick="location.href='file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20PERSONAL/Inicio.html'">Inicio</button>
-            <button onclick="location.href='file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20PERSONAL/Conocenos.html'">Conocenos</button>
-            <button onclick="location.href='file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20PERSONAL/Quienes%20Somos.html'">Quienes Somos</button>
-            <button onclick="location.href='file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20PERSONAL/Que%20Hacemos.html'">Que Hacemos</button>
-            <button onclick="location.href='file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20PERSONAL/Ubicacion.html'">Ubicacion</button>
-            <button onclick="location.href='file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20PERSONAL/Redes%20Sociales.html'">Redes Sociales</button>
-            <button onclick="location.href='file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20PERSONAL/Opiniones.html'">Opiniones</button>
-            <button onclick="location.href='file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20PERSONAL/Horario.html'">Horarios</button>
-        </div>
-    </div>
-
+    <li><a Style="color:Red;"href="file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20EMPRESARIAL/Index%20Empresarial.html">Inicio</a></li>
+     <li><a Style="color:Red;"href="file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20EMPRESARIAL/Conocenos.html">Conocenos</a></li>
+     <li><a Style="color:Red;"href="file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20EMPRESARIAL/Quienes%20Somos.html">Quienes Somos</a></li> 
+     <li><a Style="color:Red;"href="file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20EMPRESARIAL/Que%20Hacemos.html">Que Hacemos</a></li>
+     <li><a Style="color:Red;"href="file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20EMPRESARIAL/Ubicacion.html">Ubicacion</a></li>
+     <li><a Style="color:Red;"href="file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20EMPRESARIAL/Redes%20Sociales.html">Redes Sociales</a></li>
+     <li><a Style="color:Red;"href="file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20EMPRESARIAL/Opiniones.html">Opiniones</a></li> 
+     <li><a Style="color:Red;"href="file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20EMPRESARIAL/Horario.html">Horario</a></li> 
+     <li><a Style="color:Red;"href="file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20EMPRESARIAL/Anexos.html">Anexos</a></li> 
+     
 
 </ul>
 </body>
@@ -125,7 +124,7 @@
     <title>Cambiar Color de Fondo</title>
     <style>
         body {
-            background-color: lightblue; /* Cambia el color aquí */
+            background-color: purple; /* Cambia el color aquí */
         }
     </style>
 </head>
