--- a/Conocenos.html
+++ b/Conocenos.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="es">
 <head>
 </head>
@@ -74,18 +73,16 @@
             background-color: #ddd;
         }
     </style>
-    <div class="buttons">
-            <button onclick="location.href='file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20PERSONAL/Inicio.html'">Inicio</button>
-            <button onclick="location.href='file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20PERSONAL/Conocenos.html'">Conocenos</button>
-            <button onclick="location.href='file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20PERSONAL/Quienes%20Somos.html'">Quienes Somos</button>
-            <button onclick="location.href='file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20PERSONAL/Que%20Hacemos.html'">Que Hacemos</button>
-            <button onclick="location.href='file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20PERSONAL/Ubicacion.html'">Ubicacion</button>
-            <button onclick="location.href='file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20PERSONAL/Redes%20Sociales.html'">Redes Sociales</button>
-            <button onclick="location.href='file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20PERSONAL/Opiniones.html'">Opiniones</button>
-            <button onclick="location.href='file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20PERSONAL/Horario.html'">Horarios</button>
-        </div>
-    </div>
-
+     <li><a Style="color:Red;"href="file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20EMPRESARIAL/Index%20Empresarial.html">Inicio</a></li>
+     <li><a Style="color:Red;"href="file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20EMPRESARIAL/Conocenos.html">Conocenos</a></li>
+     <li><a Style="color:Red;"href="file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20EMPRESARIAL/Quienes%20Somos.html">Quienes Somos</a></li> 
+     <li><a Style="color:Red;"href="file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20EMPRESARIAL/Que%20Hacemos.html">Que Hacemos</a></li>
+     <li><a Style="color:Red;"href="file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20EMPRESARIAL/Ubicacion.html">Ubicacion</a></li>
+     <li><a Style="color:Red;"href="file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20EMPRESARIAL/Redes%20Sociales.html">Redes Sociales</a></li>
+     <li><a Style="color:Red;"href="file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20EMPRESARIAL/Opiniones.html">Opiniones</a></li> 
+     <li><a Style="color:Red;"href="file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20EMPRESARIAL/Horario.html">Horario</a></li> 
+     <li><a Style="color:Red;"href="file:///C:/Users/anton/OneDrive/Documentos/DISE%C3%91O%20WEB/INDEX%20EMPRESARIAL/Anexos.html">Anexos</a></li> 
+     
 
 </ul>
 </body>
@@ -198,66 +195,46 @@
     <main>
         <section id="home">
             <h1>Bienvenido a Mi Página Web</h1>
-            <p>Esta es una página de ejemplo.</p>
+            <p>Sera un gusto atenderle.</p>
         </section>
+<p><h1>Bienvenidos a Buffet Doña Mari</h1></p>
 
-        <section id="about">
-            <h2>Sobre Nosotros</h2>
-            <p>¡Descubre el maravilloso mundo de la música con nuestras clases personalizadas!
- Ofrecemos lecciones para todos los niveles y edades, desde principiantes hasta avanzados. 
-Con un enfoque en la teoría musical, técnica y expresión artística, nuestros experimentados profesores te guiarán en tu viaje musical.</P>
-<P>LO QUE OFRECEMOS:</P>
+<p>En Buffet Doña Mari, nos dedicamos a ofrecer una experiencia culinaria
+ inigualable, combinando una extensa variedad de platos exquisitos con un servicio 
+de primera categoría. Nuestro bufet es el lugar ideal para disfrutar de una comida deliciosa 
+en un ambiente cálido y </p>
 
-<P>CLASES INDIVIDUALES Y GRUPALES: Adaptamos nuestras lecciones a tus necesidades y objetivos personales.
-Variedad de instrumentos: Piano, guitarra, violín, batería, guiro y muchos más.</P>
+<p><h2>Nuestra Historia</p></h2>
 
-<P>TEORIA MUSICAL Y SOFEO:</P>
-Comprende la estructura de la música para mejorar tu interpretación y composición.
+Desde nuestra apertura en [Año de Fundación], [Nombre del Bufet] ha sido sinónimo de calidad y excelencia en la gastronomía. Fundado por [Nombre del Fundador o Fundadores], nuestro establecimiento nació de la pasión por la buena comida y el deseo de crear un espacio donde cada visitante se sienta como en casa. A lo largo de los años, hemos evolucionado y crecido, siempre manteniendo nuestra dedicación a la satisfacción del cliente.
 
-<P>PREPARACION PARA EXAMEN Y AUDICIONES:</P>
- Te ayudamos a prepararte para exámenes musicales, audiciones y presentaciones en vivo.
-Estilos musicales diversos: Desde alabanzas de adoracion, de jubilo y mucho mas.<P>
+<p><h2>Nuestra Misión</p></h2>
 
-<P>BENEFICIOS DE NUESTAS CLASES:</P>
+En Buffet Doña Mari, nuestra misión es simple: ofrecer a nuestros clientes una experiencia gastronómica memorable con platos preparados con ingredientes frescos y de alta calidad. Nos esforzamos por innovar continuamente, ofreciendo nuevas y emocionantes opciones para todos los gustos.
 
-<P><li>Metodologia Personalizada:</Li></P> 
-Cada estudiante recibe un plan de estudios adaptado a sus intereses y ritmo de aprendizaje.
+<p><h2>Nuestros Valores</p></h2>
 
-<P><Li> Profosores Cualificados:</Li></P> Instructores con experiencia y pasión por la enseñanza.
+<p>Calidad:<p>
+Utilizamos solo los mejores ingredientes para asegurar que cada plato sea una obra maestra culinaria.
+<p>Variedad:<p>
+Ofrecemos una amplia gama de opciones, desde especialidades locales hasta platos internacionales, asegurando que haya algo para todos.
+<p>Servicio: <p>
+Nuestro equipo de profesionales está dedicado a proporcionar un servicio atento y personalizado para cada uno de nuestros clientes.
+<p>Innovación:<p>
+ Estamos en constante búsqueda de nuevas recetas y técnicas para sorprender y deleitar a nuestros comensales.
+Lo Que Nos Hace Especiales
 
-<P><Li>Ambiente Motivador:</Li></P> Fomentamos un entorno de aprendizaje positivo y enriquecedor.
+<p>Ingredientes Frescos:<p>
+ Nos abastecemos de ingredientes frescos y de origen local siempre que es posible, garantizando la frescura y el sabor en cada bocado.
+<p>Diversidad Culinaria:<p>
+ Nuestro bufet incluye una amplia selección de platos que van desde opciones vegetarianas y veganas hasta carnes y mariscos preparados de manera exquisita.
+<p>Ambiente Acogedor:<p>
+ Hemos creado un entorno cómodo y elegante, perfecto para cualquier ocasión, ya sea una cena íntima o una celebración en grupo.
+<p>Equipo Dedicado:<p>
+ Nuestro equipo está formado por chefs talentosos y personal amable que se esfuerza por brindar una experiencia excepcional a cada visitante.
+Visítanos
 
-<P><Li>Oportunidades de Presentación:</Li></P> Participa en recitales y conciertos organizados por nuestra academia.
-
-<P><Li>Horarios flexibles:</Li></P>
-Ofrecemos clases durante la semana y los fines de semana, con opciones de mañana, tarde y noche para adaptarnos a tu horario.
-
-<P>¡No importa tu edad o nivel de experiencia, en nuestras clases de música encontrarás el apoyo y la inspiración 
-que necesitas para alcanzar tus metas musicales! Contacta con nosotros hoy mismo para programar tu primera clase y comenzar tu aventura musical.</p>
-        </section>
-
-        <section id="services">
-            <h2>Servicios</h2>
-            <p>Ofrecemos una variedad de servicios para satisfacer tus necesidades.</p>
-        </section>
-
-        <section id="contact">
-            <h2>Contacto</h2>
-            <form id="contact-form">
-                <label for="name">Nombre:</label>
-                <input type="text" id="name" name="name" required>
-
-                <label for="email">Correo Electrónico:</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="message">Mensaje:</label>
-                <textarea id="message" name="message" required></textarea>
-
-                <button type="submit">Enviar</button>
-            </form>
-        </section>
-    </main>
-
+<p>Te invitamos a visitarnos y descubrir por qué Buffet Doña Mari es el destino favorito de tantos amantes de la buena comida. Ya sea para un almuerzo rápido, una cena en familia o una ocasión especial, te garantizamos una experiencia que superará tus expectativas.</p>
     
     <script>
         document.getElementById('contact-form').addEventListener('submit', function(event) {
@@ -273,9 +250,9 @@ que necesitas para alcanzar tus metas musicales! Contacta con nosotros hoy mismo
     <title>Cambiar Color de Fondo</title>
     <style>
         body {
-            background-color: lightblue; /* Cambia el color aquí */
+            background-color: purple; /* Cambia el color aquí */
         }
     </style>
 </head>
 </body>
-</html>
+</html> 
